--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -1,7 +1,7 @@
 .section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(100% , 15rem), 1fr));
-  row-gap: 1rem;
+  row-gap: 2rem;
 
   /* background-color: var(--project-back); */
   backdrop-filter: blur(8px);
@@ -9,8 +9,12 @@
 
 .card {
   background-color: transparent;
-  height: 300px;
-  width: 200px;
+  height: 20rem;
+  width: 15rem;
+  /* min-width: 15rem; */
+  /* width: 20rem; */
+  /* width: minmax(15rem, 20rem); */
+  max-width: 20rem;
   perspective: 1000px;
   margin: auto;
 }
@@ -33,7 +37,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; 
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 5px;
   overflow: hidden;
