--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -1,18 +1,16 @@
 .section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(100% , 15rem), 1fr));
-  gap: 2rem; 
-  
+  row-gap: 1rem;
+
   /* background-color: var(--project-back); */
   backdrop-filter: blur(8px);
 }
 
 .card {
   background-color: transparent;
-  height: 20rem;
-  width: 100%;
-  max-width: 20rem;
-  /* width: 15rem; */
+  height: 300px;
+  width: 200px;
   perspective: 1000px;
   margin: auto;
 }
@@ -25,7 +23,6 @@
   transform-style: preserve-3d;
   box-shadow: 0px 0px 10px 2px var(--project-shadow);
   border-radius: 5px;
-  text-align: center;
 }
 
 .card:hover .cardInner {
@@ -36,7 +33,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; 
   backface-visibility: hidden;
   border-radius: 5px;
   overflow: hidden;
