--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -1,16 +1,16 @@
 .section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(100% , 15rem), 1fr));
-  row-gap: 1rem;
-
-  /* background-color: var(--project-back); */
+  gap: 1rem;
   backdrop-filter: blur(8px);
 }
 
 .card {
   background-color: transparent;
   height: 300px;
-  width: 200px;
+  width: 100%;
+  min-width: 200px;
+  max-width: 400px;
   perspective: 1000px;
   margin: auto;
 }
@@ -41,26 +41,26 @@
 }
 
 .cardFront {
-  /* background-color: var(--project-back); */
-  /* background: linear-gradient(293deg, var(--footer-back) 0%, var(--project-back) 100%); */
-  /* background: linear-gradient(
-    180deg,
-    rgba(22, 24, 30, 0) 0%,
-    rgba(22, 24, 30, 0.7) 65.28%
-  ),
-  linear-gradient(0deg, rgba(22, 24, 30, 0.4), rgba(22, 24, 30, 0.4)); */
-  /* background: linear-gradient(0deg, #000, #272727); */
-  /* background: linear-gradient(-45deg, #a200ff 0%, #ff0f7f 100% ); */
-  /* background: linear-gradient(344deg, rgba(40,40,55,1) 0%, rgba(16,16,18,1) 50%);
-   */
-   /* background: rgb(219, 189, 189); */
-   /* background: linear-gradient(293deg, #1e90ff 0%, var(--card-color1) 25%, #1e90ff 100%); */
    background: linear-gradient(293deg, rgb(17, 17, 17) 0%, rgb(30, 30, 30) 25%, rgb(14, 14, 14) 100%);
 }
 
 .cardBack {
-    /* background-color: var(--project-back); */
-    background: linear-gradient(293deg, rgb(17, 17, 17) 0%, rgb(206, 145, 120) 25%, rgb(14, 14, 14) 100%);
-  /* background: linear-gradient(293deg, #a3d1ff 0%, #1e90ff 25%, #a3d1ff 100%); */
+  background: linear-gradient(293deg, rgb(17, 17, 17) 0%, rgb(206, 145, 120) 25%, rgb(14, 14, 14) 100%);
   transform: rotateY(180deg);
+}
+
+.cardFrontTitle, .cardBackTitle {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  background-color: var(--banner-back);
+  backdrop-filter: blur(8px);
+}
+
+.cardBackLinks {
+  display: grid;
+  place-items: center;
+  gap: 0.5rem;
+  margin: 0.5rem
 }
