--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -1,6 +1,6 @@
 .section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(100% , 15rem), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 15rem), 1fr));
   gap: 1rem;
   backdrop-filter: blur(8px);
   margin: 1rem;
@@ -8,7 +8,7 @@
 
 .card {
   background-color: transparent;
-  height: 300px;
+  height: 350px;
   width: 100%;
   min-width: 200px;
   max-width: 400px;
@@ -22,8 +22,8 @@
   position: relative;
   transition: transform 0.3s;
   transform-style: preserve-3d;
-  box-shadow: 0 8px 14px 0 rgba(255,255,255,0.2);
-  border: 1px solid rgb(58, 58, 58);
+  box-shadow: 0 8px 14px 0 var(--project-shadow);
+  border: 1px solid var(--project-border);
   border-radius: 1rem;
 }
 
@@ -35,18 +35,19 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; 
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 1rem;
   overflow: hidden;
 }
 
 .cardFront {
-   background: linear-gradient(293deg, rgb(17, 17, 17) 0%, rgb(30, 30, 30) 25%, rgb(14, 14, 14) 100%);
+  background: linear-gradient(293deg, var(--project-color1) 0%, var(--project-color3) 25%, var(--project-color2) 100%);
+  display: grid;
 }
 
 .cardBack {
-  background: linear-gradient(293deg, rgb(17, 17, 17) 0%, rgb(206, 145, 120) 25%, rgb(14, 14, 14) 100%);
+  background: linear-gradient(293deg, var(--project-color1) 0%, var(--project-color4) 25%, var(--project-color2) 100%);
   transform: rotateY(180deg);
 }
 
@@ -57,6 +58,11 @@
   padding: 1rem;
   background-color: var(--banner-back);
   backdrop-filter: blur(8px);
+}
+
+.cardFrontContent {
+  display: grid;
+  justify-content: space-evenly;
 }
 
 .cardBackLinks {
