--- a/src/components/title.module.css
+++ b/src/components/title.module.css
@@ -7,6 +7,7 @@
   max-width: 50rem;
   backdrop-filter: blur(8px);
   margin: auto;
+  margin-top: 2rem;
   text-align: center;
   padding: 1rem;
 }
