--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -2,9 +2,9 @@
   z-index: 1;
   position: fixed;
   width: 100%;
-  height: 3rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.048);
+  /* background-color: rgba(255, 255, 255, 0.05); */
 }
