--- a/src/components/social.module.css
+++ b/src/components/social.module.css
@@ -8,25 +8,25 @@
 }
 
 .imgGitHub {
-  background-color: rgb(12, 39, 55);
+  background-color: var(--social-color1);
 }
 
 .imgTwitch {
-  background-color: rgb(158, 67, 250);
+  background-color: var(--social-color2);
 }
 
 .imgYoutube {
-  background-color: rgb(255, 1, 0);
+  background-color: var(--social-color3);
 }
 
 .imgLinkedin {
-  background-color: rgb(2, 123, 189);
+  background-color: var(--social-color4);
 }
 
 .section span {
   display: grid;
   place-items: center;
-  background-color: white;
+  background-color: var(--social-color5);
   height: 46px;
   width: 46px;
   border-radius: 50%;
