--- a/src/components/menu.module.css
+++ b/src/components/menu.module.css
@@ -2,9 +2,12 @@
   z-index: 1;
   position: fixed;
   width: 100%;
-  padding: 0.5rem;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   /* background-color: rgba(255, 255, 255, 0.05); */
+}
+
+.section a {
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
 }
