--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,20 @@
   padding: 0.5rem;
 }
 
+.menu {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  /* background-color: rgba(255, 255, 255, 0.05); */
+}
+
+.menu a {
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+}
+
 .hobbie {
   position: relative;
 }
