--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,9 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
+  --scroll-behavior: smooth!important;
+  scroll-behavior: smooth!important;
 }
 
 body {
