--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,14 +6,11 @@
   z-index: 1;
   position: fixed;
   width: 100%;
+  height: 3rem;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   /* background-color: rgba(255, 255, 255, 0.05); */
-}
-
-.menu a {
-  padding: 0.5rem;
-  width: 100%;
-  text-align: center;
 }
 
 .hobbie {
