--- a/src/components/imgBackground.module.css
+++ b/src/components/imgBackground.module.css
@@ -1,7 +1,7 @@
 .img {
   z-index: -1;
   object-fit: cover;
-  object-position: left bottom;
+  object-position: center bottom;
   filter: blur(8px);
   background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 1) 90%, transparent 100%);
   mask-image: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 1) 10%, rgba(0, 0, 0, 1) 90%, transparent 100%);
