--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,10 +50,14 @@
   margin: 0;
 }
 
-html {
-  /* scroll-behavior: smooth; */
+/* body {
   --scroll-behavior: smooth!important;
   scroll-behavior: smooth!important;
+} */
+
+/* scroll-behavior: smooth; */
+body::-webkit-scrollbar{
+  display: none;
 }
 
 body {
