--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,12 +50,10 @@
   margin: 0;
 }
 
-/* body {
-  --scroll-behavior: smooth!important;
-  scroll-behavior: smooth!important;
-} */
+html {
+  scroll-behavior: smooth;
+}
 
-/* scroll-behavior: smooth; */
 body::-webkit-scrollbar{
   display: none;
 }
